# cutils

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  build32.bat  build64.bat  buildEclipse.sh  buildMake.sh  cutilsConfig.cmake.in
IqrfCdcChannel/: CMakeLists.txt  IqrfCdcChannel.cpp  IqrfCdcChannel.h
IqrfFakeChannel/: CMakeLists.txt  IqrfFakeChannel.cpp  IqrfFakeChannel.h
IqrfSpiChannel/: CMakeLists.txt  IqrfSpiChannel.cpp  IqrfSpiChannel.h
MqChannel/: CMakeLists.txt  MqChannel.cpp  MqChannel.h
UdpChannel/: CMakeLists.txt  UdpChannel.cpp  UdpChannel.h
include/: CMakeLists.txt  IChannel.h  IqrfLogging.h  PlatformDep.h
